make controller and app context

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,5 +1,5 @@
 {
-    "next_id": 328,
+    "next_id": 394,
     "tasks": [
         {
             "id": 158,
@@ -807,6 +807,534 @@
             "description": "#B0E0E6",
             "date_start": "1999-08-28 00:00:00",
             "date_end": "1999-08-28 13:00:00",
+            "is_completed": false
+        },
+        {
+            "id": 328,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 329,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 330,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 331,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 332,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 333,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 334,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 335,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 336,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 337,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 338,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 339,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 340,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 341,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 342,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 343,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 344,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 345,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 346,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 347,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 348,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 349,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 350,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 351,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 352,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 353,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 354,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 355,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 356,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 357,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 358,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 359,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 360,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 361,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 362,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 363,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 364,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 365,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 366,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 367,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 368,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 369,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 370,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 371,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 372,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 373,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 374,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 375,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 376,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 377,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 378,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 379,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 380,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 381,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 382,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 383,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 384,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 385,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 386,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 387,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 388,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 389,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 390,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 391,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 392,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
+            "is_completed": false
+        },
+        {
+            "id": 393,
+            "name": "name4",
+            "description": "ebgkerngk",
+            "date_start": "1999-08-28 00:00:00",
+            "date_end": "1999-08-28 00:00:35",
             "is_completed": false
         }
     ]
