--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,29 +1,61 @@
 {
-    "next_id": 161,
+    "next_id": 170,
     "tasks": [
         {
             "id": 158,
             "name": "Edit taskVersion2",
             "description": "Edit Version2",
-            "date_start": "1999-08-28 00:00:00",
-            "date_end": "1999-08-28 00:55:00",
+            "date_start": "1999-08-28T00:00:00",
+            "date_end": "1999-08-28T00:55:00",
             "is_completed": true
         },
         {
             "id": 159,
             "name": "Edit taskVersion2",
             "description": "Edit Version2",
-            "date_start": "1999-08-28 00:00:00",
-            "date_end": "1999-08-28 00:55:00",
+            "date_start": "1999-08-28T00:00:00",
+            "date_end": "1999-08-28T00:55:00",
             "is_completed": true
         },
         {
             "id": 160,
             "name": "Edit taskVersion2",
             "description": "Edit Version2",
-            "date_start": "1999-08-28 00:00:00",
-            "date_end": "1999-08-28 00:55:00",
+            "date_start": "1999-08-28T00:00:00",
+            "date_end": "1999-08-28T00:55:00",
             "is_completed": true
+        },
+        {
+            "id": 161,
+            "name": "TEESt",
+            "description": "just belive it's work",
+            "date_start": "2034-08-28T00:00:00",
+            "date_end": "2034-08-30T23:12:03",
+            "is_completed": false
+        },
+        {
+            "id": 162,
+            "name": "New Year",
+            "description": "hi mark",
+            "date_start": "2019-12-12T00:00:00",
+            "date_end": "2030-12-14T04:54:03",
+            "is_completed": false
+        },
+        {
+            "id": 167,
+            "name": "Monday",
+            "description": "dudes",
+            "date_start": "2019-05-27T00:00:00",
+            "date_end": "2019-05-27T00:00:05",
+            "is_completed": false
+        },
+        {
+            "id": 169,
+            "name": "Wednesday",
+            "description": "bones",
+            "date_start": "2019-05-27T00:00:00",
+            "date_end": "2019-05-27T00:00:05",
+            "is_completed": false
         }
     ]
 }
