--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,8 @@ prompt-toolkit = "*"
 python-dateutil = "*"
 flask-script = "*"
 simplejson = "*"
+pydoc = "*"
+pydoc3 = "*"
 
 [requires]
 python_version = "3.6"
