--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,5 +1,5 @@
 {
-    "next_id": 170,
+    "next_id": 172,
     "tasks": [
         {
             "id": 158,
@@ -7,7 +7,7 @@
             "description": "Edit Version2",
             "date_start": "1999-08-28T00:00:00",
             "date_end": "1999-08-28T00:55:00",
-            "is_completed": true
+            "is_completed": false
         },
         {
             "id": 159,
@@ -39,7 +39,7 @@
             "description": "hi mark",
             "date_start": "2019-12-12T00:00:00",
             "date_end": "2030-12-14T04:54:03",
-            "is_completed": false
+            "is_completed": true
         },
         {
             "id": 167,
@@ -55,6 +55,22 @@
             "description": "bones",
             "date_start": "2019-05-27T00:00:00",
             "date_end": "2019-05-27T00:00:05",
+            "is_completed": false
+        },
+        {
+            "id": 170,
+            "name": "task",
+            "description": "sadfasd",
+            "date_start": "2018-05-28T00:00:00",
+            "date_end": "2018-05-28T10:10:10",
+            "is_completed": false
+        },
+        {
+            "id": 171,
+            "name": "test",
+            "description": "test",
+            "date_start": "2019-05-29T00:00:00",
+            "date_end": "2019-05-29T10:10:10",
             "is_completed": false
         }
     ]
