--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,5 +1,5 @@
 {
-    "next_id": 172,
+    "next_id": 174,
     "tasks": [
         {
             "id": 158,
@@ -71,6 +71,22 @@
             "description": "test",
             "date_start": "2019-05-29T00:00:00",
             "date_end": "2019-05-29T10:10:10",
+            "is_completed": false
+        },
+        {
+            "id": 172,
+            "name": "TestVal",
+            "description": "here",
+            "date_start": "2019-05-12T00:00:00",
+            "date_end": "2019-05-12T01:00:00",
+            "is_completed": false
+        },
+        {
+            "id": 173,
+            "name": "TestVal",
+            "description": "here",
+            "date_start": "2019-05-12T00:00:00",
+            "date_end": "2019-05-12T01:00:00",
             "is_completed": false
         }
     ]
