--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,12 +1,12 @@
 {
-    "next_id": 174,
+    "next_id": 179,
     "tasks": [
         {
             "id": 158,
-            "name": "Edit taskVersion2",
-            "description": "Edit Version2",
-            "date_start": "1999-08-28T00:00:00",
-            "date_end": "1999-08-28T00:55:00",
+            "name": "asdf",
+            "description": "213",
+            "date_start": "2000-12-10T00:00:00",
+            "date_end": "2000-12-10T10:10:10",
             "is_completed": true
         },
         {
@@ -26,20 +26,12 @@
             "is_completed": false
         },
         {
-            "id": 161,
-            "name": "TEESt",
-            "description": "just belive it's work",
-            "date_start": "2034-08-28T00:00:00",
-            "date_end": "2034-08-30T23:12:03",
-            "is_completed": false
-        },
-        {
             "id": 162,
-            "name": "New Year",
-            "description": "hi mark",
-            "date_start": "2019-12-12T00:00:00",
-            "date_end": "2030-12-14T04:54:03",
-            "is_completed": true
+            "name": "asdfa",
+            "description": "asdfa",
+            "date_start": "2012-12-12T00:00:00",
+            "date_end": "2012-12-12T12:00:00",
+            "is_completed": false
         },
         {
             "id": 167,
@@ -87,6 +79,22 @@
             "description": "here",
             "date_start": "2019-05-12T00:00:00",
             "date_end": "2019-05-12T01:00:00",
+            "is_completed": false
+        },
+        {
+            "id": 174,
+            "name": "3312",
+            "description": "123",
+            "date_start": "2019-12-10T00:00:00",
+            "date_end": "2019-12-10T10:10:10",
+            "is_completed": false
+        },
+        {
+            "id": 175,
+            "name": "sadlf",
+            "description": "123",
+            "date_start": "2030-12-10T00:00:00",
+            "date_end": "2030-12-10T10:10:10",
             "is_completed": false
         }
     ]
