--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,5 +1,5 @@
 {
-    "next_id": 183,
+    "next_id": 184,
     "tasks": [
         {
             "id": 158,
@@ -96,6 +96,14 @@
             "date_start": "2030-12-10T00:00:00",
             "date_end": "2030-12-10T10:10:10",
             "is_completed": false
+        },
+        {
+            "id": 183,
+            "name": "Test value",
+            "description": "description",
+            "date_start": "2019-06-03T00:00:00",
+            "date_end": "2019-06-03T12:30:45",
+            "is_completed": true
         }
     ]
 }
